--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ crossorigin="anonymous"></script>
   
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="/images/favicon.png">
+  <link rel="icon" type="image/png" href="/images/logo.png">
 </head>
 <body style="display: flex; flex-direction: column; min-height: 100vh;">
 
