init resume index

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ crossorigin="anonymous"></script>
 
 <div class="index-container" id='/index.html' data-name='index' data-version='2.0.12'>
 	<div class='index-intro'>
-		Bazinga, theme cutie!
+		只身打马过草原
 	</div>
 	
 		<div class="grid-2_md-1 grid-equalHeight index-cards">
@@ -314,7 +314,7 @@ crossorigin="anonymous"></script>
 <footer id='footer'>
     <div class='footer-copyright'>
         <div>
-            <p> 版权所有 <a href="">Jason Wang </a> @ 2018</p>
+            <p> 版权所有 <a href="www.anoasis.cn">Jason Wang </a> @ 2018</p>
             <p>设计: <i class="fas fa-paint-brush"></i> <a href="https://moober.cn">Moober</a> 和 <i class="fas fa-graduation-cap"></i> <a href="https://qutang.github.io">Qu Tang</a> &bull; 主题: <a href="https://qutang.github.io/cutie/">Cutie 2.0.12-Taurus</a> &bull; 由 <a href="http://hexo.io">Hexo.</a> 强力驱动</p>
         </div>
     </div>
